// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StackedAreaGraph> renders with both snap and section8 1`] = `
<StackedAreaGraph
  activePrograms={
    Array [
      "snap",
      "section8",
    ]
  }
  client={
    Object {
      "current": Object {
        "SSDI": 0,
        "SSI": 0,
        "TAFDC": 0,
        "adultDirectCare": 0,
        "adultOtherCare": 0,
        "adultTransportation": 0,
        "alimony": 0,
        "childBeforeAndAfterSchoolCare": 0,
        "childDirectCare": 0,
        "childOtherCare": 0,
        "childSupportIn": 0,
        "childSupportPaidOut": 0,
        "childTransportation": 0,
        "climateControl": false,
        "contractRent": 0,
        "disabledAssistance": 0,
        "disabledMedical": 0,
        "earned": 100,
        "earnedBecauseOfAdultCare": 0,
        "earnedBecauseOfChildCare": 0,
        "fuelAssistance": false,
        "hasSection8": false,
        "hasSnap": false,
        "household": Array [
          Object {
            "m_age": 30,
            "m_disabled": false,
            "m_role": "head",
          },
        ],
        "housing": "homeless",
        "housingInsurance": 0,
        "mortgage": 0,
        "nonHeatElectricity": false,
        "otherExpensesCable": 0,
        "otherExpensesCareProducts": 0,
        "otherExpensesClothes": 0,
        "otherExpensesEntertainment": 0,
        "otherExpensesFood": 0,
        "otherExpensesMedical": 0,
        "otherExpensesOther": 0,
        "otherExpensesPhone": 0,
        "otherExpensesTransport": 0,
        "otherExpensesUtilities": 0,
        "otherIncome": 0,
        "otherMedical": 0,
        "pension": 0,
        "phone": false,
        "propertyTax": 0,
        "rent": 0,
        "rentShare": 0,
        "socialSecurity": 0,
        "unemployment": 0,
        "wantsToSeeOtherExpenses": false,
        "workersComp": 0,
      },
      "future": Object {
        "SSDI": 0,
        "SSI": 0,
        "TAFDC": 0,
        "adultDirectCare": 0,
        "adultOtherCare": 0,
        "adultTransportation": 0,
        "alimony": 0,
        "childBeforeAndAfterSchoolCare": 0,
        "childDirectCare": 0,
        "childOtherCare": 0,
        "childSupportIn": 0,
        "childSupportPaidOut": 0,
        "childTransportation": 0,
        "climateControl": false,
        "contractRent": 0,
        "disabledAssistance": 0,
        "disabledMedical": 0,
        "earned": 200,
        "earnedBecauseOfAdultCare": 0,
        "earnedBecauseOfChildCare": 0,
        "fuelAssistance": false,
        "hasSection8": false,
        "hasSnap": false,
        "household": Array [
          Object {
            "m_age": 30,
            "m_disabled": false,
            "m_role": "head",
          },
        ],
        "housing": "homeless",
        "housingInsurance": 0,
        "mortgage": 0,
        "nonHeatElectricity": false,
        "otherExpensesCable": 0,
        "otherExpensesCareProducts": 0,
        "otherExpensesClothes": 0,
        "otherExpensesEntertainment": 0,
        "otherExpensesFood": 0,
        "otherExpensesMedical": 0,
        "otherExpensesOther": 0,
        "otherExpensesPhone": 0,
        "otherExpensesTransport": 0,
        "otherExpensesUtilities": 0,
        "otherIncome": 0,
        "otherMedical": 0,
        "pension": 0,
        "phone": false,
        "propertyTax": 0,
        "rent": 0,
        "rentShare": 0,
        "socialSecurity": 0,
        "unemployment": 0,
        "wantsToSeeOtherExpenses": false,
        "workersComp": 0,
      },
    }
  }
  timescale="Monthly"
>
  <Line
    data={
      Object {
        "datasets": Array [
          Object {
            "backgroundColor": "rgb(136, 187, 236)",
            "borderColor": "rgb(136, 187, 236)",
            "data": Array [
              0,
              90,
              180,
              270,
              360,
              450,
              540,
              630,
              720,
              810,
              900,
              990,
              1080,
              1170,
              1260,
              1350,
              1440,
              1530,
              1620,
              1710,
              1800,
              1890,
              1980,
              2070,
              2160,
              2250,
              2340,
              2430,
              2520,
              2610,
              2700,
              2790,
              2880,
              2970,
              3060,
              3150,
              3240,
              3330,
              3420,
              3510,
              3600,
              3690,
              3780,
              3870,
              3960,
              4050,
              4140,
              4230,
              4320,
              4410,
              4500,
              4590,
              4680,
              4770,
              4860,
              4950,
              5040,
              5130,
              5220,
              5310,
              5400,
              5490,
              5580,
              5670,
              5760,
              5850,
              5940,
              6030,
              6120,
              6210,
              6300,
              6390,
              6480,
              6570,
              6660,
              6750,
              6840,
              6930,
              7020,
              7110,
              7200,
              7290,
              7380,
              7470,
              7560,
              7650,
              7740,
              7830,
              7920,
              8010,
              8100,
              8190,
              8280,
              8370,
              8460,
            ],
            "fill": "origin",
            "label": "Income",
          },
          Object {
            "backgroundColor": "rgba(101, 47, 138, 1)",
            "borderColor": "rgba(101, 47, 138, 1)",
            "data": Array [
              192,
              192,
              192,
              192,
              192,
              174.9,
              153.3,
              131.7,
              110.10000000000001,
              88.5,
              66.9,
              45.30000000000001,
              23.700000000000017,
              15,
              15,
              15,
              15,
              15,
              15,
              15,
              15,
              15,
              15,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
            "label": "SNAP",
          },
          Object {
            "backgroundColor": "rgba(206, 203, 61, 1)",
            "borderColor": "rgba(206, 203, 61, 1)",
            "data": Array [
              30,
              3,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
            "label": "Section 8 Housing",
          },
        ],
        "labels": Array [
          0,
          90,
          180,
          270,
          360,
          450,
          540,
          630,
          720,
          810,
          900,
          990,
          1080,
          1170,
          1260,
          1350,
          1440,
          1530,
          1620,
          1710,
          1800,
          1890,
          1980,
          2070,
          2160,
          2250,
          2340,
          2430,
          2520,
          2610,
          2700,
          2790,
          2880,
          2970,
          3060,
          3150,
          3240,
          3330,
          3420,
          3510,
          3600,
          3690,
          3780,
          3870,
          3960,
          4050,
          4140,
          4230,
          4320,
          4410,
          4500,
          4590,
          4680,
          4770,
          4860,
          4950,
          5040,
          5130,
          5220,
          5310,
          5400,
          5490,
          5580,
          5670,
          5760,
          5850,
          5940,
          6030,
          6120,
          6210,
          6300,
          6390,
          6480,
          6570,
          6660,
          6750,
          6840,
          6930,
          7020,
          7110,
          7200,
          7290,
          7380,
          7470,
          7560,
          7650,
          7740,
          7830,
          7920,
          8010,
          8100,
          8190,
          8280,
          8370,
          8460,
        ],
      }
    }
    options={
      Object {
        "elements": Object {
          "line": Object {
            "fill": "-1",
          },
          "point": Object {
            "hitRadius": 10,
            "hoverRadius": 10,
            "radius": 0,
          },
        },
        "scales": Object {
          "xAxes": Array [
            Object {
              "scaleLabel": Object {
                "display": true,
                "labelString": "Monthly Income ($)",
              },
              "stacked": true,
              "ticks": Object {
                "callback": [Function],
              },
            },
          ],
          "yAxes": Array [
            Object {
              "scaleLabel": Object {
                "display": true,
                "labelString": "Total Money Coming In ($)",
              },
              "stacked": true,
              "ticks": Object {
                "beginAtZero": true,
                "callback": [Function],
              },
            },
          ],
        },
        "title": Object {
          "display": true,
          "text": "All Money Coming in as Income Changes",
        },
        "tooltips": Object {
          "callbacks": Object {
            "label": [Function],
            "title": [Function],
          },
        },
      }
    }
    plugins={
      Array [
        VerticalLine {
          "afterDatasetsDraw": [Function],
          "income": 200,
          "xRange": Array [
            0,
            90,
            180,
            270,
            360,
            450,
            540,
            630,
            720,
            810,
            900,
            990,
            1080,
            1170,
            1260,
            1350,
            1440,
            1530,
            1620,
            1710,
            1800,
            1890,
            1980,
            2070,
            2160,
            2250,
            2340,
            2430,
            2520,
            2610,
            2700,
            2790,
            2880,
            2970,
            3060,
            3150,
            3240,
            3330,
            3420,
            3510,
            3600,
            3690,
            3780,
            3870,
            3960,
            4050,
            4140,
            4230,
            4320,
            4410,
            4500,
            4590,
            4680,
            4770,
            4860,
            4950,
            5040,
            5130,
            5220,
            5310,
            5400,
            5490,
            5580,
            5670,
            5760,
            5850,
            5940,
            6030,
            6120,
            6210,
            6300,
            6390,
            6480,
            6570,
            6660,
            6750,
            6840,
            6930,
            7020,
            7110,
            7200,
            7290,
            7380,
            7470,
            7560,
            7650,
            7740,
            7830,
            7920,
            8010,
            8100,
            8190,
            8280,
            8370,
            8460,
          ],
        },
      ]
    }
    redraw={true}
  >
    <LineMock
      data={
        Object {
          "datasets": Array [
            Object {
              "backgroundColor": "rgb(136, 187, 236)",
              "borderColor": "rgb(136, 187, 236)",
              "data": Array [
                0,
                90,
                180,
                270,
                360,
                450,
                540,
                630,
                720,
                810,
                900,
                990,
                1080,
                1170,
                1260,
                1350,
                1440,
                1530,
                1620,
                1710,
                1800,
                1890,
                1980,
                2070,
                2160,
                2250,
                2340,
                2430,
                2520,
                2610,
                2700,
                2790,
                2880,
                2970,
                3060,
                3150,
                3240,
                3330,
                3420,
                3510,
                3600,
                3690,
                3780,
                3870,
                3960,
                4050,
                4140,
                4230,
                4320,
                4410,
                4500,
                4590,
                4680,
                4770,
                4860,
                4950,
                5040,
                5130,
                5220,
                5310,
                5400,
                5490,
                5580,
                5670,
                5760,
                5850,
                5940,
                6030,
                6120,
                6210,
                6300,
                6390,
                6480,
                6570,
                6660,
                6750,
                6840,
                6930,
                7020,
                7110,
                7200,
                7290,
                7380,
                7470,
                7560,
                7650,
                7740,
                7830,
                7920,
                8010,
                8100,
                8190,
                8280,
                8370,
                8460,
              ],
              "fill": "origin",
              "label": "Income",
            },
            Object {
              "backgroundColor": "rgba(101, 47, 138, 1)",
              "borderColor": "rgba(101, 47, 138, 1)",
              "data": Array [
                192,
                192,
                192,
                192,
                192,
                174.9,
                153.3,
                131.7,
                110.10000000000001,
                88.5,
                66.9,
                45.30000000000001,
                23.700000000000017,
                15,
                15,
                15,
                15,
                15,
                15,
                15,
                15,
                15,
                15,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
              ],
              "label": "SNAP",
            },
            Object {
              "backgroundColor": "rgba(206, 203, 61, 1)",
              "borderColor": "rgba(206, 203, 61, 1)",
              "data": Array [
                30,
                3,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
              ],
              "label": "Section 8 Housing",
            },
          ],
          "labels": Array [
            0,
            90,
            180,
            270,
            360,
            450,
            540,
            630,
            720,
            810,
            900,
            990,
            1080,
            1170,
            1260,
            1350,
            1440,
            1530,
            1620,
            1710,
            1800,
            1890,
            1980,
            2070,
            2160,
            2250,
            2340,
            2430,
            2520,
            2610,
            2700,
            2790,
            2880,
            2970,
            3060,
            3150,
            3240,
            3330,
            3420,
            3510,
            3600,
            3690,
            3780,
            3870,
            3960,
            4050,
            4140,
            4230,
            4320,
            4410,
            4500,
            4590,
            4680,
            4770,
            4860,
            4950,
            5040,
            5130,
            5220,
            5310,
            5400,
            5490,
            5580,
            5670,
            5760,
            5850,
            5940,
            6030,
            6120,
            6210,
            6300,
            6390,
            6480,
            6570,
            6660,
            6750,
            6840,
            6930,
            7020,
            7110,
            7200,
            7290,
            7380,
            7470,
            7560,
            7650,
            7740,
            7830,
            7920,
            8010,
            8100,
            8190,
            8280,
            8370,
            8460,
          ],
        }
      }
      options={
        Object {
          "elements": Object {
            "line": Object {
              "fill": "-1",
            },
            "point": Object {
              "hitRadius": 10,
              "hoverRadius": 10,
              "radius": 0,
            },
          },
          "scales": Object {
            "xAxes": Array [
              Object {
                "scaleLabel": Object {
                  "display": true,
                  "labelString": "Monthly Income ($)",
                },
                "stacked": true,
                "ticks": Object {
                  "callback": [Function],
                },
              },
            ],
            "yAxes": Array [
              Object {
                "scaleLabel": Object {
                  "display": true,
                  "labelString": "Total Money Coming In ($)",
                },
                "stacked": true,
                "ticks": Object {
                  "beginAtZero": true,
                  "callback": [Function],
                },
              },
            ],
          },
          "title": Object {
            "display": true,
            "text": "All Money Coming in as Income Changes",
          },
          "tooltips": Object {
            "callbacks": Object {
              "label": [Function],
              "title": [Function],
            },
          },
        }
      }
      plugins={
        Array [
          VerticalLine {
            "afterDatasetsDraw": [Function],
            "income": 200,
            "xRange": Array [
              0,
              90,
              180,
              270,
              360,
              450,
              540,
              630,
              720,
              810,
              900,
              990,
              1080,
              1170,
              1260,
              1350,
              1440,
              1530,
              1620,
              1710,
              1800,
              1890,
              1980,
              2070,
              2160,
              2250,
              2340,
              2430,
              2520,
              2610,
              2700,
              2790,
              2880,
              2970,
              3060,
              3150,
              3240,
              3330,
              3420,
              3510,
              3600,
              3690,
              3780,
              3870,
              3960,
              4050,
              4140,
              4230,
              4320,
              4410,
              4500,
              4590,
              4680,
              4770,
              4860,
              4950,
              5040,
              5130,
              5220,
              5310,
              5400,
              5490,
              5580,
              5670,
              5760,
              5850,
              5940,
              6030,
              6120,
              6210,
              6300,
              6390,
              6480,
              6570,
              6660,
              6750,
              6840,
              6930,
              7020,
              7110,
              7200,
              7290,
              7380,
              7470,
              7560,
              7650,
              7740,
              7830,
              7920,
              8010,
              8100,
              8190,
              8280,
              8370,
              8460,
            ],
          },
        ]
      }
      redraw={true}
    />
  </Line>
</StackedAreaGraph>
`;

exports[`<StackedAreaGraph> renders with section8 1`] = `
<StackedAreaGraph
  activePrograms={
    Array [
      "section8",
    ]
  }
  client={
    Object {
      "current": Object {
        "SSDI": 0,
        "SSI": 0,
        "TAFDC": 0,
        "adultDirectCare": 0,
        "adultOtherCare": 0,
        "adultTransportation": 0,
        "alimony": 0,
        "childBeforeAndAfterSchoolCare": 0,
        "childDirectCare": 0,
        "childOtherCare": 0,
        "childSupportIn": 0,
        "childSupportPaidOut": 0,
        "childTransportation": 0,
        "climateControl": false,
        "contractRent": 0,
        "disabledAssistance": 0,
        "disabledMedical": 0,
        "earned": 100,
        "earnedBecauseOfAdultCare": 0,
        "earnedBecauseOfChildCare": 0,
        "fuelAssistance": false,
        "hasSection8": false,
        "hasSnap": false,
        "household": Array [
          Object {
            "m_age": 30,
            "m_disabled": false,
            "m_role": "head",
          },
        ],
        "housing": "homeless",
        "housingInsurance": 0,
        "mortgage": 0,
        "nonHeatElectricity": false,
        "otherExpensesCable": 0,
        "otherExpensesCareProducts": 0,
        "otherExpensesClothes": 0,
        "otherExpensesEntertainment": 0,
        "otherExpensesFood": 0,
        "otherExpensesMedical": 0,
        "otherExpensesOther": 0,
        "otherExpensesPhone": 0,
        "otherExpensesTransport": 0,
        "otherExpensesUtilities": 0,
        "otherIncome": 0,
        "otherMedical": 0,
        "pension": 0,
        "phone": false,
        "propertyTax": 0,
        "rent": 0,
        "rentShare": 0,
        "socialSecurity": 0,
        "unemployment": 0,
        "wantsToSeeOtherExpenses": false,
        "workersComp": 0,
      },
      "future": Object {
        "SSDI": 0,
        "SSI": 0,
        "TAFDC": 0,
        "adultDirectCare": 0,
        "adultOtherCare": 0,
        "adultTransportation": 0,
        "alimony": 0,
        "childBeforeAndAfterSchoolCare": 0,
        "childDirectCare": 0,
        "childOtherCare": 0,
        "childSupportIn": 0,
        "childSupportPaidOut": 0,
        "childTransportation": 0,
        "climateControl": false,
        "contractRent": 0,
        "disabledAssistance": 0,
        "disabledMedical": 0,
        "earned": 200,
        "earnedBecauseOfAdultCare": 0,
        "earnedBecauseOfChildCare": 0,
        "fuelAssistance": false,
        "hasSection8": false,
        "hasSnap": false,
        "household": Array [
          Object {
            "m_age": 30,
            "m_disabled": false,
            "m_role": "head",
          },
        ],
        "housing": "homeless",
        "housingInsurance": 0,
        "mortgage": 0,
        "nonHeatElectricity": false,
        "otherExpensesCable": 0,
        "otherExpensesCareProducts": 0,
        "otherExpensesClothes": 0,
        "otherExpensesEntertainment": 0,
        "otherExpensesFood": 0,
        "otherExpensesMedical": 0,
        "otherExpensesOther": 0,
        "otherExpensesPhone": 0,
        "otherExpensesTransport": 0,
        "otherExpensesUtilities": 0,
        "otherIncome": 0,
        "otherMedical": 0,
        "pension": 0,
        "phone": false,
        "propertyTax": 0,
        "rent": 0,
        "rentShare": 0,
        "socialSecurity": 0,
        "unemployment": 0,
        "wantsToSeeOtherExpenses": false,
        "workersComp": 0,
      },
    }
  }
  timescale="Monthly"
>
  <Line
    data={
      Object {
        "datasets": Array [
          Object {
            "backgroundColor": "rgb(136, 187, 236)",
            "borderColor": "rgb(136, 187, 236)",
            "data": Array [
              0,
              90,
              180,
              270,
              360,
              450,
              540,
              630,
              720,
              810,
              900,
              990,
              1080,
              1170,
              1260,
              1350,
              1440,
              1530,
              1620,
              1710,
              1800,
              1890,
              1980,
              2070,
              2160,
              2250,
              2340,
              2430,
              2520,
              2610,
              2700,
              2790,
              2880,
              2970,
              3060,
              3150,
              3240,
              3330,
              3420,
              3510,
              3600,
              3690,
              3780,
              3870,
              3960,
              4050,
              4140,
              4230,
              4320,
              4410,
              4500,
              4590,
              4680,
              4770,
              4860,
              4950,
              5040,
              5130,
              5220,
              5310,
              5400,
              5490,
              5580,
              5670,
              5760,
              5850,
              5940,
              6030,
              6120,
              6210,
              6300,
              6390,
              6480,
              6570,
              6660,
              6750,
              6840,
              6930,
              7020,
              7110,
              7200,
              7290,
              7380,
              7470,
              7560,
              7650,
              7740,
              7830,
              7920,
              8010,
              8100,
              8190,
              8280,
              8370,
              8460,
            ],
            "fill": "origin",
            "label": "Income",
          },
          Object {
            "backgroundColor": "rgba(206, 203, 61, 1)",
            "borderColor": "rgba(206, 203, 61, 1)",
            "data": Array [
              30,
              3,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
            "label": "Section 8 Housing",
          },
        ],
        "labels": Array [
          0,
          90,
          180,
          270,
          360,
          450,
          540,
          630,
          720,
          810,
          900,
          990,
          1080,
          1170,
          1260,
          1350,
          1440,
          1530,
          1620,
          1710,
          1800,
          1890,
          1980,
          2070,
          2160,
          2250,
          2340,
          2430,
          2520,
          2610,
          2700,
          2790,
          2880,
          2970,
          3060,
          3150,
          3240,
          3330,
          3420,
          3510,
          3600,
          3690,
          3780,
          3870,
          3960,
          4050,
          4140,
          4230,
          4320,
          4410,
          4500,
          4590,
          4680,
          4770,
          4860,
          4950,
          5040,
          5130,
          5220,
          5310,
          5400,
          5490,
          5580,
          5670,
          5760,
          5850,
          5940,
          6030,
          6120,
          6210,
          6300,
          6390,
          6480,
          6570,
          6660,
          6750,
          6840,
          6930,
          7020,
          7110,
          7200,
          7290,
          7380,
          7470,
          7560,
          7650,
          7740,
          7830,
          7920,
          8010,
          8100,
          8190,
          8280,
          8370,
          8460,
        ],
      }
    }
    options={
      Object {
        "elements": Object {
          "line": Object {
            "fill": "-1",
          },
          "point": Object {
            "hitRadius": 10,
            "hoverRadius": 10,
            "radius": 0,
          },
        },
        "scales": Object {
          "xAxes": Array [
            Object {
              "scaleLabel": Object {
                "display": true,
                "labelString": "Monthly Income ($)",
              },
              "stacked": true,
              "ticks": Object {
                "callback": [Function],
              },
            },
          ],
          "yAxes": Array [
            Object {
              "scaleLabel": Object {
                "display": true,
                "labelString": "Total Money Coming In ($)",
              },
              "stacked": true,
              "ticks": Object {
                "beginAtZero": true,
                "callback": [Function],
              },
            },
          ],
        },
        "title": Object {
          "display": true,
          "text": "All Money Coming in as Income Changes",
        },
        "tooltips": Object {
          "callbacks": Object {
            "label": [Function],
            "title": [Function],
          },
        },
      }
    }
    plugins={
      Array [
        VerticalLine {
          "afterDatasetsDraw": [Function],
          "income": 200,
          "xRange": Array [
            0,
            90,
            180,
            270,
            360,
            450,
            540,
            630,
            720,
            810,
            900,
            990,
            1080,
            1170,
            1260,
            1350,
            1440,
            1530,
            1620,
            1710,
            1800,
            1890,
            1980,
            2070,
            2160,
            2250,
            2340,
            2430,
            2520,
            2610,
            2700,
            2790,
            2880,
            2970,
            3060,
            3150,
            3240,
            3330,
            3420,
            3510,
            3600,
            3690,
            3780,
            3870,
            3960,
            4050,
            4140,
            4230,
            4320,
            4410,
            4500,
            4590,
            4680,
            4770,
            4860,
            4950,
            5040,
            5130,
            5220,
            5310,
            5400,
            5490,
            5580,
            5670,
            5760,
            5850,
            5940,
            6030,
            6120,
            6210,
            6300,
            6390,
            6480,
            6570,
            6660,
            6750,
            6840,
            6930,
            7020,
            7110,
            7200,
            7290,
            7380,
            7470,
            7560,
            7650,
            7740,
            7830,
            7920,
            8010,
            8100,
            8190,
            8280,
            8370,
            8460,
          ],
        },
      ]
    }
    redraw={true}
  >
    <LineMock
      data={
        Object {
          "datasets": Array [
            Object {
              "backgroundColor": "rgb(136, 187, 236)",
              "borderColor": "rgb(136, 187, 236)",
              "data": Array [
                0,
                90,
                180,
                270,
                360,
                450,
                540,
                630,
                720,
                810,
                900,
                990,
                1080,
                1170,
                1260,
                1350,
                1440,
                1530,
                1620,
                1710,
                1800,
                1890,
                1980,
                2070,
                2160,
                2250,
                2340,
                2430,
                2520,
                2610,
                2700,
                2790,
                2880,
                2970,
                3060,
                3150,
                3240,
                3330,
                3420,
                3510,
                3600,
                3690,
                3780,
                3870,
                3960,
                4050,
                4140,
                4230,
                4320,
                4410,
                4500,
                4590,
                4680,
                4770,
                4860,
                4950,
                5040,
                5130,
                5220,
                5310,
                5400,
                5490,
                5580,
                5670,
                5760,
                5850,
                5940,
                6030,
                6120,
                6210,
                6300,
                6390,
                6480,
                6570,
                6660,
                6750,
                6840,
                6930,
                7020,
                7110,
                7200,
                7290,
                7380,
                7470,
                7560,
                7650,
                7740,
                7830,
                7920,
                8010,
                8100,
                8190,
                8280,
                8370,
                8460,
              ],
              "fill": "origin",
              "label": "Income",
            },
            Object {
              "backgroundColor": "rgba(206, 203, 61, 1)",
              "borderColor": "rgba(206, 203, 61, 1)",
              "data": Array [
                30,
                3,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
              ],
              "label": "Section 8 Housing",
            },
          ],
          "labels": Array [
            0,
            90,
            180,
            270,
            360,
            450,
            540,
            630,
            720,
            810,
            900,
            990,
            1080,
            1170,
            1260,
            1350,
            1440,
            1530,
            1620,
            1710,
            1800,
            1890,
            1980,
            2070,
            2160,
            2250,
            2340,
            2430,
            2520,
            2610,
            2700,
            2790,
            2880,
            2970,
            3060,
            3150,
            3240,
            3330,
            3420,
            3510,
            3600,
            3690,
            3780,
            3870,
            3960,
            4050,
            4140,
            4230,
            4320,
            4410,
            4500,
            4590,
            4680,
            4770,
            4860,
            4950,
            5040,
            5130,
            5220,
            5310,
            5400,
            5490,
            5580,
            5670,
            5760,
            5850,
            5940,
            6030,
            6120,
            6210,
            6300,
            6390,
            6480,
            6570,
            6660,
            6750,
            6840,
            6930,
            7020,
            7110,
            7200,
            7290,
            7380,
            7470,
            7560,
            7650,
            7740,
            7830,
            7920,
            8010,
            8100,
            8190,
            8280,
            8370,
            8460,
          ],
        }
      }
      options={
        Object {
          "elements": Object {
            "line": Object {
              "fill": "-1",
            },
            "point": Object {
              "hitRadius": 10,
              "hoverRadius": 10,
              "radius": 0,
            },
          },
          "scales": Object {
            "xAxes": Array [
              Object {
                "scaleLabel": Object {
                  "display": true,
                  "labelString": "Monthly Income ($)",
                },
                "stacked": true,
                "ticks": Object {
                  "callback": [Function],
                },
              },
            ],
            "yAxes": Array [
              Object {
                "scaleLabel": Object {
                  "display": true,
                  "labelString": "Total Money Coming In ($)",
                },
                "stacked": true,
                "ticks": Object {
                  "beginAtZero": true,
                  "callback": [Function],
                },
              },
            ],
          },
          "title": Object {
            "display": true,
            "text": "All Money Coming in as Income Changes",
          },
          "tooltips": Object {
            "callbacks": Object {
              "label": [Function],
              "title": [Function],
            },
          },
        }
      }
      plugins={
        Array [
          VerticalLine {
            "afterDatasetsDraw": [Function],
            "income": 200,
            "xRange": Array [
              0,
              90,
              180,
              270,
              360,
              450,
              540,
              630,
              720,
              810,
              900,
              990,
              1080,
              1170,
              1260,
              1350,
              1440,
              1530,
              1620,
              1710,
              1800,
              1890,
              1980,
              2070,
              2160,
              2250,
              2340,
              2430,
              2520,
              2610,
              2700,
              2790,
              2880,
              2970,
              3060,
              3150,
              3240,
              3330,
              3420,
              3510,
              3600,
              3690,
              3780,
              3870,
              3960,
              4050,
              4140,
              4230,
              4320,
              4410,
              4500,
              4590,
              4680,
              4770,
              4860,
              4950,
              5040,
              5130,
              5220,
              5310,
              5400,
              5490,
              5580,
              5670,
              5760,
              5850,
              5940,
              6030,
              6120,
              6210,
              6300,
              6390,
              6480,
              6570,
              6660,
              6750,
              6840,
              6930,
              7020,
              7110,
              7200,
              7290,
              7380,
              7470,
              7560,
              7650,
              7740,
              7830,
              7920,
              8010,
              8100,
              8190,
              8280,
              8370,
              8460,
            ],
          },
        ]
      }
      redraw={true}
    />
  </Line>
</StackedAreaGraph>
`;

exports[`<StackedAreaGraph> renders with snap and current earned greater than future earned 1`] = `
<StackedAreaGraph
  activePrograms={
    Array [
      "snap",
    ]
  }
  client={
    Object {
      "current": Object {
        "SSDI": 0,
        "SSI": 0,
        "TAFDC": 0,
        "adultDirectCare": 0,
        "adultOtherCare": 0,
        "adultTransportation": 0,
        "alimony": 0,
        "childBeforeAndAfterSchoolCare": 0,
        "childDirectCare": 0,
        "childOtherCare": 0,
        "childSupportIn": 0,
        "childSupportPaidOut": 0,
        "childTransportation": 0,
        "climateControl": false,
        "contractRent": 0,
        "disabledAssistance": 0,
        "disabledMedical": 0,
        "earned": 200,
        "earnedBecauseOfAdultCare": 0,
        "earnedBecauseOfChildCare": 0,
        "fuelAssistance": false,
        "hasSection8": false,
        "hasSnap": false,
        "household": Array [
          Object {
            "m_age": 30,
            "m_disabled": false,
            "m_role": "head",
          },
        ],
        "housing": "homeless",
        "housingInsurance": 0,
        "mortgage": 0,
        "nonHeatElectricity": false,
        "otherExpensesCable": 0,
        "otherExpensesCareProducts": 0,
        "otherExpensesClothes": 0,
        "otherExpensesEntertainment": 0,
        "otherExpensesFood": 0,
        "otherExpensesMedical": 0,
        "otherExpensesOther": 0,
        "otherExpensesPhone": 0,
        "otherExpensesTransport": 0,
        "otherExpensesUtilities": 0,
        "otherIncome": 0,
        "otherMedical": 0,
        "pension": 0,
        "phone": false,
        "propertyTax": 0,
        "rent": 0,
        "rentShare": 0,
        "socialSecurity": 0,
        "unemployment": 0,
        "wantsToSeeOtherExpenses": false,
        "workersComp": 0,
      },
      "future": Object {
        "SSDI": 0,
        "SSI": 0,
        "TAFDC": 0,
        "adultDirectCare": 0,
        "adultOtherCare": 0,
        "adultTransportation": 0,
        "alimony": 0,
        "childBeforeAndAfterSchoolCare": 0,
        "childDirectCare": 0,
        "childOtherCare": 0,
        "childSupportIn": 0,
        "childSupportPaidOut": 0,
        "childTransportation": 0,
        "climateControl": false,
        "contractRent": 0,
        "disabledAssistance": 0,
        "disabledMedical": 0,
        "earned": 100,
        "earnedBecauseOfAdultCare": 0,
        "earnedBecauseOfChildCare": 0,
        "fuelAssistance": false,
        "hasSection8": false,
        "hasSnap": false,
        "household": Array [
          Object {
            "m_age": 30,
            "m_disabled": false,
            "m_role": "head",
          },
        ],
        "housing": "homeless",
        "housingInsurance": 0,
        "mortgage": 0,
        "nonHeatElectricity": false,
        "otherExpensesCable": 0,
        "otherExpensesCareProducts": 0,
        "otherExpensesClothes": 0,
        "otherExpensesEntertainment": 0,
        "otherExpensesFood": 0,
        "otherExpensesMedical": 0,
        "otherExpensesOther": 0,
        "otherExpensesPhone": 0,
        "otherExpensesTransport": 0,
        "otherExpensesUtilities": 0,
        "otherIncome": 0,
        "otherMedical": 0,
        "pension": 0,
        "phone": false,
        "propertyTax": 0,
        "rent": 0,
        "rentShare": 0,
        "socialSecurity": 0,
        "unemployment": 0,
        "wantsToSeeOtherExpenses": false,
        "workersComp": 0,
      },
    }
  }
  timescale="Monthly"
>
  <Line
    data={
      Object {
        "datasets": Array [
          Object {
            "backgroundColor": "rgb(136, 187, 236)",
            "borderColor": "rgb(136, 187, 236)",
            "data": Array [
              0,
              90,
              180,
              270,
              360,
              450,
              540,
              630,
              720,
              810,
              900,
              990,
              1080,
              1170,
              1260,
              1350,
              1440,
              1530,
              1620,
              1710,
              1800,
              1890,
              1980,
              2070,
              2160,
              2250,
              2340,
              2430,
              2520,
              2610,
              2700,
              2790,
              2880,
              2970,
              3060,
              3150,
              3240,
              3330,
              3420,
              3510,
              3600,
              3690,
              3780,
              3870,
              3960,
              4050,
              4140,
              4230,
              4320,
              4410,
              4500,
              4590,
              4680,
              4770,
              4860,
              4950,
              5040,
              5130,
              5220,
              5310,
              5400,
              5490,
              5580,
              5670,
              5760,
              5850,
              5940,
              6030,
              6120,
              6210,
              6300,
              6390,
              6480,
              6570,
              6660,
              6750,
              6840,
              6930,
              7020,
              7110,
              7200,
              7290,
              7380,
              7470,
              7560,
              7650,
              7740,
              7830,
              7920,
              8010,
              8100,
              8190,
              8280,
              8370,
              8460,
            ],
            "fill": "origin",
            "label": "Income",
          },
          Object {
            "backgroundColor": "rgba(101, 47, 138, 1)",
            "borderColor": "rgba(101, 47, 138, 1)",
            "data": Array [
              192,
              192,
              192,
              192,
              192,
              174.9,
              153.3,
              131.7,
              110.10000000000001,
              88.5,
              66.9,
              45.30000000000001,
              23.700000000000017,
              15,
              15,
              15,
              15,
              15,
              15,
              15,
              15,
              15,
              15,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
            "label": "SNAP",
          },
        ],
        "labels": Array [
          0,
          90,
          180,
          270,
          360,
          450,
          540,
          630,
          720,
          810,
          900,
          990,
          1080,
          1170,
          1260,
          1350,
          1440,
          1530,
          1620,
          1710,
          1800,
          1890,
          1980,
          2070,
          2160,
          2250,
          2340,
          2430,
          2520,
          2610,
          2700,
          2790,
          2880,
          2970,
          3060,
          3150,
          3240,
          3330,
          3420,
          3510,
          3600,
          3690,
          3780,
          3870,
          3960,
          4050,
          4140,
          4230,
          4320,
          4410,
          4500,
          4590,
          4680,
          4770,
          4860,
          4950,
          5040,
          5130,
          5220,
          5310,
          5400,
          5490,
          5580,
          5670,
          5760,
          5850,
          5940,
          6030,
          6120,
          6210,
          6300,
          6390,
          6480,
          6570,
          6660,
          6750,
          6840,
          6930,
          7020,
          7110,
          7200,
          7290,
          7380,
          7470,
          7560,
          7650,
          7740,
          7830,
          7920,
          8010,
          8100,
          8190,
          8280,
          8370,
          8460,
        ],
      }
    }
    options={
      Object {
        "elements": Object {
          "line": Object {
            "fill": "-1",
          },
          "point": Object {
            "hitRadius": 10,
            "hoverRadius": 10,
            "radius": 0,
          },
        },
        "scales": Object {
          "xAxes": Array [
            Object {
              "scaleLabel": Object {
                "display": true,
                "labelString": "Monthly Income ($)",
              },
              "stacked": true,
              "ticks": Object {
                "callback": [Function],
              },
            },
          ],
          "yAxes": Array [
            Object {
              "scaleLabel": Object {
                "display": true,
                "labelString": "Total Money Coming In ($)",
              },
              "stacked": true,
              "ticks": Object {
                "beginAtZero": true,
                "callback": [Function],
              },
            },
          ],
        },
        "title": Object {
          "display": true,
          "text": "All Money Coming in as Income Changes",
        },
        "tooltips": Object {
          "callbacks": Object {
            "label": [Function],
            "title": [Function],
          },
        },
      }
    }
    plugins={
      Array [
        VerticalLine {
          "afterDatasetsDraw": [Function],
          "income": 100,
          "xRange": Array [
            0,
            90,
            180,
            270,
            360,
            450,
            540,
            630,
            720,
            810,
            900,
            990,
            1080,
            1170,
            1260,
            1350,
            1440,
            1530,
            1620,
            1710,
            1800,
            1890,
            1980,
            2070,
            2160,
            2250,
            2340,
            2430,
            2520,
            2610,
            2700,
            2790,
            2880,
            2970,
            3060,
            3150,
            3240,
            3330,
            3420,
            3510,
            3600,
            3690,
            3780,
            3870,
            3960,
            4050,
            4140,
            4230,
            4320,
            4410,
            4500,
            4590,
            4680,
            4770,
            4860,
            4950,
            5040,
            5130,
            5220,
            5310,
            5400,
            5490,
            5580,
            5670,
            5760,
            5850,
            5940,
            6030,
            6120,
            6210,
            6300,
            6390,
            6480,
            6570,
            6660,
            6750,
            6840,
            6930,
            7020,
            7110,
            7200,
            7290,
            7380,
            7470,
            7560,
            7650,
            7740,
            7830,
            7920,
            8010,
            8100,
            8190,
            8280,
            8370,
            8460,
          ],
        },
      ]
    }
    redraw={true}
  >
    <LineMock
      data={
        Object {
          "datasets": Array [
            Object {
              "backgroundColor": "rgb(136, 187, 236)",
              "borderColor": "rgb(136, 187, 236)",
              "data": Array [
                0,
                90,
                180,
                270,
                360,
                450,
                540,
                630,
                720,
                810,
                900,
                990,
                1080,
                1170,
                1260,
                1350,
                1440,
                1530,
                1620,
                1710,
                1800,
                1890,
                1980,
                2070,
                2160,
                2250,
                2340,
                2430,
                2520,
                2610,
                2700,
                2790,
                2880,
                2970,
                3060,
                3150,
                3240,
                3330,
                3420,
                3510,
                3600,
                3690,
                3780,
                3870,
                3960,
                4050,
                4140,
                4230,
                4320,
                4410,
                4500,
                4590,
                4680,
                4770,
                4860,
                4950,
                5040,
                5130,
                5220,
                5310,
                5400,
                5490,
                5580,
                5670,
                5760,
                5850,
                5940,
                6030,
                6120,
                6210,
                6300,
                6390,
                6480,
                6570,
                6660,
                6750,
                6840,
                6930,
                7020,
                7110,
                7200,
                7290,
                7380,
                7470,
                7560,
                7650,
                7740,
                7830,
                7920,
                8010,
                8100,
                8190,
                8280,
                8370,
                8460,
              ],
              "fill": "origin",
              "label": "Income",
            },
            Object {
              "backgroundColor": "rgba(101, 47, 138, 1)",
              "borderColor": "rgba(101, 47, 138, 1)",
              "data": Array [
                192,
                192,
                192,
                192,
                192,
                174.9,
                153.3,
                131.7,
                110.10000000000001,
                88.5,
                66.9,
                45.30000000000001,
                23.700000000000017,
                15,
                15,
                15,
                15,
                15,
                15,
                15,
                15,
                15,
                15,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
              ],
              "label": "SNAP",
            },
          ],
          "labels": Array [
            0,
            90,
            180,
            270,
            360,
            450,
            540,
            630,
            720,
            810,
            900,
            990,
            1080,
            1170,
            1260,
            1350,
            1440,
            1530,
            1620,
            1710,
            1800,
            1890,
            1980,
            2070,
            2160,
            2250,
            2340,
            2430,
            2520,
            2610,
            2700,
            2790,
            2880,
            2970,
            3060,
            3150,
            3240,
            3330,
            3420,
            3510,
            3600,
            3690,
            3780,
            3870,
            3960,
            4050,
            4140,
            4230,
            4320,
            4410,
            4500,
            4590,
            4680,
            4770,
            4860,
            4950,
            5040,
            5130,
            5220,
            5310,
            5400,
            5490,
            5580,
            5670,
            5760,
            5850,
            5940,
            6030,
            6120,
            6210,
            6300,
            6390,
            6480,
            6570,
            6660,
            6750,
            6840,
            6930,
            7020,
            7110,
            7200,
            7290,
            7380,
            7470,
            7560,
            7650,
            7740,
            7830,
            7920,
            8010,
            8100,
            8190,
            8280,
            8370,
            8460,
          ],
        }
      }
      options={
        Object {
          "elements": Object {
            "line": Object {
              "fill": "-1",
            },
            "point": Object {
              "hitRadius": 10,
              "hoverRadius": 10,
              "radius": 0,
            },
          },
          "scales": Object {
            "xAxes": Array [
              Object {
                "scaleLabel": Object {
                  "display": true,
                  "labelString": "Monthly Income ($)",
                },
                "stacked": true,
                "ticks": Object {
                  "callback": [Function],
                },
              },
            ],
            "yAxes": Array [
              Object {
                "scaleLabel": Object {
                  "display": true,
                  "labelString": "Total Money Coming In ($)",
                },
                "stacked": true,
                "ticks": Object {
                  "beginAtZero": true,
                  "callback": [Function],
                },
              },
            ],
          },
          "title": Object {
            "display": true,
            "text": "All Money Coming in as Income Changes",
          },
          "tooltips": Object {
            "callbacks": Object {
              "label": [Function],
              "title": [Function],
            },
          },
        }
      }
      plugins={
        Array [
          VerticalLine {
            "afterDatasetsDraw": [Function],
            "income": 100,
            "xRange": Array [
              0,
              90,
              180,
              270,
              360,
              450,
              540,
              630,
              720,
              810,
              900,
              990,
              1080,
              1170,
              1260,
              1350,
              1440,
              1530,
              1620,
              1710,
              1800,
              1890,
              1980,
              2070,
              2160,
              2250,
              2340,
              2430,
              2520,
              2610,
              2700,
              2790,
              2880,
              2970,
              3060,
              3150,
              3240,
              3330,
              3420,
              3510,
              3600,
              3690,
              3780,
              3870,
              3960,
              4050,
              4140,
              4230,
              4320,
              4410,
              4500,
              4590,
              4680,
              4770,
              4860,
              4950,
              5040,
              5130,
              5220,
              5310,
              5400,
              5490,
              5580,
              5670,
              5760,
              5850,
              5940,
              6030,
              6120,
              6210,
              6300,
              6390,
              6480,
              6570,
              6660,
              6750,
              6840,
              6930,
              7020,
              7110,
              7200,
              7290,
              7380,
              7470,
              7560,
              7650,
              7740,
              7830,
              7920,
              8010,
              8100,
              8190,
              8280,
              8370,
              8460,
            ],
          },
        ]
      }
      redraw={true}
    />
  </Line>
</StackedAreaGraph>
`;

exports[`<StackedAreaGraph> renders with snap and current earned less than future earned 1`] = `
<StackedAreaGraph
  activePrograms={
    Array [
      "snap",
    ]
  }
  client={
    Object {
      "current": Object {
        "SSDI": 0,
        "SSI": 0,
        "TAFDC": 0,
        "adultDirectCare": 0,
        "adultOtherCare": 0,
        "adultTransportation": 0,
        "alimony": 0,
        "childBeforeAndAfterSchoolCare": 0,
        "childDirectCare": 0,
        "childOtherCare": 0,
        "childSupportIn": 0,
        "childSupportPaidOut": 0,
        "childTransportation": 0,
        "climateControl": false,
        "contractRent": 0,
        "disabledAssistance": 0,
        "disabledMedical": 0,
        "earned": 100,
        "earnedBecauseOfAdultCare": 0,
        "earnedBecauseOfChildCare": 0,
        "fuelAssistance": false,
        "hasSection8": false,
        "hasSnap": false,
        "household": Array [
          Object {
            "m_age": 30,
            "m_disabled": false,
            "m_role": "head",
          },
        ],
        "housing": "homeless",
        "housingInsurance": 0,
        "mortgage": 0,
        "nonHeatElectricity": false,
        "otherExpensesCable": 0,
        "otherExpensesCareProducts": 0,
        "otherExpensesClothes": 0,
        "otherExpensesEntertainment": 0,
        "otherExpensesFood": 0,
        "otherExpensesMedical": 0,
        "otherExpensesOther": 0,
        "otherExpensesPhone": 0,
        "otherExpensesTransport": 0,
        "otherExpensesUtilities": 0,
        "otherIncome": 0,
        "otherMedical": 0,
        "pension": 0,
        "phone": false,
        "propertyTax": 0,
        "rent": 0,
        "rentShare": 0,
        "socialSecurity": 0,
        "unemployment": 0,
        "wantsToSeeOtherExpenses": false,
        "workersComp": 0,
      },
      "future": Object {
        "SSDI": 0,
        "SSI": 0,
        "TAFDC": 0,
        "adultDirectCare": 0,
        "adultOtherCare": 0,
        "adultTransportation": 0,
        "alimony": 0,
        "childBeforeAndAfterSchoolCare": 0,
        "childDirectCare": 0,
        "childOtherCare": 0,
        "childSupportIn": 0,
        "childSupportPaidOut": 0,
        "childTransportation": 0,
        "climateControl": false,
        "contractRent": 0,
        "disabledAssistance": 0,
        "disabledMedical": 0,
        "earned": 200,
        "earnedBecauseOfAdultCare": 0,
        "earnedBecauseOfChildCare": 0,
        "fuelAssistance": false,
        "hasSection8": false,
        "hasSnap": false,
        "household": Array [
          Object {
            "m_age": 30,
            "m_disabled": false,
            "m_role": "head",
          },
        ],
        "housing": "homeless",
        "housingInsurance": 0,
        "mortgage": 0,
        "nonHeatElectricity": false,
        "otherExpensesCable": 0,
        "otherExpensesCareProducts": 0,
        "otherExpensesClothes": 0,
        "otherExpensesEntertainment": 0,
        "otherExpensesFood": 0,
        "otherExpensesMedical": 0,
        "otherExpensesOther": 0,
        "otherExpensesPhone": 0,
        "otherExpensesTransport": 0,
        "otherExpensesUtilities": 0,
        "otherIncome": 0,
        "otherMedical": 0,
        "pension": 0,
        "phone": false,
        "propertyTax": 0,
        "rent": 0,
        "rentShare": 0,
        "socialSecurity": 0,
        "unemployment": 0,
        "wantsToSeeOtherExpenses": false,
        "workersComp": 0,
      },
    }
  }
  timescale="Monthly"
>
  <Line
    data={
      Object {
        "datasets": Array [
          Object {
            "backgroundColor": "rgb(136, 187, 236)",
            "borderColor": "rgb(136, 187, 236)",
            "data": Array [
              0,
              90,
              180,
              270,
              360,
              450,
              540,
              630,
              720,
              810,
              900,
              990,
              1080,
              1170,
              1260,
              1350,
              1440,
              1530,
              1620,
              1710,
              1800,
              1890,
              1980,
              2070,
              2160,
              2250,
              2340,
              2430,
              2520,
              2610,
              2700,
              2790,
              2880,
              2970,
              3060,
              3150,
              3240,
              3330,
              3420,
              3510,
              3600,
              3690,
              3780,
              3870,
              3960,
              4050,
              4140,
              4230,
              4320,
              4410,
              4500,
              4590,
              4680,
              4770,
              4860,
              4950,
              5040,
              5130,
              5220,
              5310,
              5400,
              5490,
              5580,
              5670,
              5760,
              5850,
              5940,
              6030,
              6120,
              6210,
              6300,
              6390,
              6480,
              6570,
              6660,
              6750,
              6840,
              6930,
              7020,
              7110,
              7200,
              7290,
              7380,
              7470,
              7560,
              7650,
              7740,
              7830,
              7920,
              8010,
              8100,
              8190,
              8280,
              8370,
              8460,
            ],
            "fill": "origin",
            "label": "Income",
          },
          Object {
            "backgroundColor": "rgba(101, 47, 138, 1)",
            "borderColor": "rgba(101, 47, 138, 1)",
            "data": Array [
              192,
              192,
              192,
              192,
              192,
              174.9,
              153.3,
              131.7,
              110.10000000000001,
              88.5,
              66.9,
              45.30000000000001,
              23.700000000000017,
              15,
              15,
              15,
              15,
              15,
              15,
              15,
              15,
              15,
              15,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
            "label": "SNAP",
          },
        ],
        "labels": Array [
          0,
          90,
          180,
          270,
          360,
          450,
          540,
          630,
          720,
          810,
          900,
          990,
          1080,
          1170,
          1260,
          1350,
          1440,
          1530,
          1620,
          1710,
          1800,
          1890,
          1980,
          2070,
          2160,
          2250,
          2340,
          2430,
          2520,
          2610,
          2700,
          2790,
          2880,
          2970,
          3060,
          3150,
          3240,
          3330,
          3420,
          3510,
          3600,
          3690,
          3780,
          3870,
          3960,
          4050,
          4140,
          4230,
          4320,
          4410,
          4500,
          4590,
          4680,
          4770,
          4860,
          4950,
          5040,
          5130,
          5220,
          5310,
          5400,
          5490,
          5580,
          5670,
          5760,
          5850,
          5940,
          6030,
          6120,
          6210,
          6300,
          6390,
          6480,
          6570,
          6660,
          6750,
          6840,
          6930,
          7020,
          7110,
          7200,
          7290,
          7380,
          7470,
          7560,
          7650,
          7740,
          7830,
          7920,
          8010,
          8100,
          8190,
          8280,
          8370,
          8460,
        ],
      }
    }
    options={
      Object {
        "elements": Object {
          "line": Object {
            "fill": "-1",
          },
          "point": Object {
            "hitRadius": 10,
            "hoverRadius": 10,
            "radius": 0,
          },
        },
        "scales": Object {
          "xAxes": Array [
            Object {
              "scaleLabel": Object {
                "display": true,
                "labelString": "Monthly Income ($)",
              },
              "stacked": true,
              "ticks": Object {
                "callback": [Function],
              },
            },
          ],
          "yAxes": Array [
            Object {
              "scaleLabel": Object {
                "display": true,
                "labelString": "Total Money Coming In ($)",
              },
              "stacked": true,
              "ticks": Object {
                "beginAtZero": true,
                "callback": [Function],
              },
            },
          ],
        },
        "title": Object {
          "display": true,
          "text": "All Money Coming in as Income Changes",
        },
        "tooltips": Object {
          "callbacks": Object {
            "label": [Function],
            "title": [Function],
          },
        },
      }
    }
    plugins={
      Array [
        VerticalLine {
          "afterDatasetsDraw": [Function],
          "income": 200,
          "xRange": Array [
            0,
            90,
            180,
            270,
            360,
            450,
            540,
            630,
            720,
            810,
            900,
            990,
            1080,
            1170,
            1260,
            1350,
            1440,
            1530,
            1620,
            1710,
            1800,
            1890,
            1980,
            2070,
            2160,
            2250,
            2340,
            2430,
            2520,
            2610,
            2700,
            2790,
            2880,
            2970,
            3060,
            3150,
            3240,
            3330,
            3420,
            3510,
            3600,
            3690,
            3780,
            3870,
            3960,
            4050,
            4140,
            4230,
            4320,
            4410,
            4500,
            4590,
            4680,
            4770,
            4860,
            4950,
            5040,
            5130,
            5220,
            5310,
            5400,
            5490,
            5580,
            5670,
            5760,
            5850,
            5940,
            6030,
            6120,
            6210,
            6300,
            6390,
            6480,
            6570,
            6660,
            6750,
            6840,
            6930,
            7020,
            7110,
            7200,
            7290,
            7380,
            7470,
            7560,
            7650,
            7740,
            7830,
            7920,
            8010,
            8100,
            8190,
            8280,
            8370,
            8460,
          ],
        },
      ]
    }
    redraw={true}
  >
    <LineMock
      data={
        Object {
          "datasets": Array [
            Object {
              "backgroundColor": "rgb(136, 187, 236)",
              "borderColor": "rgb(136, 187, 236)",
              "data": Array [
                0,
                90,
                180,
                270,
                360,
                450,
                540,
                630,
                720,
                810,
                900,
                990,
                1080,
                1170,
                1260,
                1350,
                1440,
                1530,
                1620,
                1710,
                1800,
                1890,
                1980,
                2070,
                2160,
                2250,
                2340,
                2430,
                2520,
                2610,
                2700,
                2790,
                2880,
                2970,
                3060,
                3150,
                3240,
                3330,
                3420,
                3510,
                3600,
                3690,
                3780,
                3870,
                3960,
                4050,
                4140,
                4230,
                4320,
                4410,
                4500,
                4590,
                4680,
                4770,
                4860,
                4950,
                5040,
                5130,
                5220,
                5310,
                5400,
                5490,
                5580,
                5670,
                5760,
                5850,
                5940,
                6030,
                6120,
                6210,
                6300,
                6390,
                6480,
                6570,
                6660,
                6750,
                6840,
                6930,
                7020,
                7110,
                7200,
                7290,
                7380,
                7470,
                7560,
                7650,
                7740,
                7830,
                7920,
                8010,
                8100,
                8190,
                8280,
                8370,
                8460,
              ],
              "fill": "origin",
              "label": "Income",
            },
            Object {
              "backgroundColor": "rgba(101, 47, 138, 1)",
              "borderColor": "rgba(101, 47, 138, 1)",
              "data": Array [
                192,
                192,
                192,
                192,
                192,
                174.9,
                153.3,
                131.7,
                110.10000000000001,
                88.5,
                66.9,
                45.30000000000001,
                23.700000000000017,
                15,
                15,
                15,
                15,
                15,
                15,
                15,
                15,
                15,
                15,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
              ],
              "label": "SNAP",
            },
          ],
          "labels": Array [
            0,
            90,
            180,
            270,
            360,
            450,
            540,
            630,
            720,
            810,
            900,
            990,
            1080,
            1170,
            1260,
            1350,
            1440,
            1530,
            1620,
            1710,
            1800,
            1890,
            1980,
            2070,
            2160,
            2250,
            2340,
            2430,
            2520,
            2610,
            2700,
            2790,
            2880,
            2970,
            3060,
            3150,
            3240,
            3330,
            3420,
            3510,
            3600,
            3690,
            3780,
            3870,
            3960,
            4050,
            4140,
            4230,
            4320,
            4410,
            4500,
            4590,
            4680,
            4770,
            4860,
            4950,
            5040,
            5130,
            5220,
            5310,
            5400,
            5490,
            5580,
            5670,
            5760,
            5850,
            5940,
            6030,
            6120,
            6210,
            6300,
            6390,
            6480,
            6570,
            6660,
            6750,
            6840,
            6930,
            7020,
            7110,
            7200,
            7290,
            7380,
            7470,
            7560,
            7650,
            7740,
            7830,
            7920,
            8010,
            8100,
            8190,
            8280,
            8370,
            8460,
          ],
        }
      }
      options={
        Object {
          "elements": Object {
            "line": Object {
              "fill": "-1",
            },
            "point": Object {
              "hitRadius": 10,
              "hoverRadius": 10,
              "radius": 0,
            },
          },
          "scales": Object {
            "xAxes": Array [
              Object {
                "scaleLabel": Object {
                  "display": true,
                  "labelString": "Monthly Income ($)",
                },
                "stacked": true,
                "ticks": Object {
                  "callback": [Function],
                },
              },
            ],
            "yAxes": Array [
              Object {
                "scaleLabel": Object {
                  "display": true,
                  "labelString": "Total Money Coming In ($)",
                },
                "stacked": true,
                "ticks": Object {
                  "beginAtZero": true,
                  "callback": [Function],
                },
              },
            ],
          },
          "title": Object {
            "display": true,
            "text": "All Money Coming in as Income Changes",
          },
          "tooltips": Object {
            "callbacks": Object {
              "label": [Function],
              "title": [Function],
            },
          },
        }
      }
      plugins={
        Array [
          VerticalLine {
            "afterDatasetsDraw": [Function],
            "income": 200,
            "xRange": Array [
              0,
              90,
              180,
              270,
              360,
              450,
              540,
              630,
              720,
              810,
              900,
              990,
              1080,
              1170,
              1260,
              1350,
              1440,
              1530,
              1620,
              1710,
              1800,
              1890,
              1980,
              2070,
              2160,
              2250,
              2340,
              2430,
              2520,
              2610,
              2700,
              2790,
              2880,
              2970,
              3060,
              3150,
              3240,
              3330,
              3420,
              3510,
              3600,
              3690,
              3780,
              3870,
              3960,
              4050,
              4140,
              4230,
              4320,
              4410,
              4500,
              4590,
              4680,
              4770,
              4860,
              4950,
              5040,
              5130,
              5220,
              5310,
              5400,
              5490,
              5580,
              5670,
              5760,
              5850,
              5940,
              6030,
              6120,
              6210,
              6300,
              6390,
              6480,
              6570,
              6660,
              6750,
              6840,
              6930,
              7020,
              7110,
              7200,
              7290,
              7380,
              7470,
              7560,
              7650,
              7740,
              7830,
              7920,
              8010,
              8100,
              8190,
              8280,
              8370,
              8460,
            ],
          },
        ]
      }
      redraw={true}
    />
  </Line>
</StackedAreaGraph>
`;
